--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </ul>
         <h2>Módulo 02</h2>
         <ul>
-            <li><a href="desafios/modulo-02/d010/index.html">Desafio 010</a> - </li>
+            <li><a href="desafios/modulo-02/d010/index.html">Desafio 010</a> - Primeira página completa </li>
         </ul>
 
     </main>
