--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </ul>
         <h2>Módulo 02</h2>
         <ul>
-            <li><a href="desafios/modulo-02/d010/index.html">Desafio 010</a> - Primeira página completa </li>
-            <li><a href="desafios/modulo-02/d011/index.html">Desafio 011</a> - Desafio Imagens </li>
+            <li><a href="desafios/modulo-02/d010/index.html" target="_blank">Desafio 010</a> - Primeira página completa </li>
+            <li><a href="desafios/modulo-02/d011/index.html" target="_blank">Desafio 011</a> - Desafio Imagens </li>
         </ul>
 
     </main>
