atualizando os exercicios e o indice

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         
     </style>
-    <title>Index</title>
+    <title>Estudos</title>
 </head>
 <body>
     <main>
@@ -66,8 +66,13 @@
         <br>
         <h2>Módulo 03</h2>
         <ul>
-            <li><a href="exercicios/ex017/index.html" target="_blank">Exercício 0</a> - </li>
-            <li><a href="exercicios/ex018/index.html" target="_blank">Exercício 0</a> - </li>
+            <li><a href="exercicios/ex019/seletor01.html" target="_blank">Exercício 019</a> - </li>
+            <li><a href="exercicios/ex020/hover.html" target="_blank">Exercício 020</a> - Hover</li>
+            <li><a href="exercicios/ex020/pseud-classes.html" target="_blank">Exercício 020</a> - Pseudo-Classes</li>
+            <li><a href="exercicios/ex021/box01.html" target="_blank">Exercício 021</a> - Caixa 1 </li>
+            <li><a href="exercicios/ex021/box02.html" target="_blank">Exercício 021</a> - Caixa 2 </li>
+            <li><a href="exercicios/ex021/box03.html" target="_blank">Exercício 021</a> - Caixa 3 </li>
+            <li><a href="exercicios/ex022/fundo001.html" target="_blank">Exercício 022</a> - Imagens de fundo</li>
         </ul>
         <h2>Módulo 04</h2>
         <ul>
