--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <br>
         <h2>Módulo 03</h2>
         <ul>
-            <li><a href="exercicios/ex019/seletor01.html" target="_blank">Exercício 019</a> - </li>
+            <li><a href="exercicios/ex019/seletor01.html" target="_blank">Exercício 019</a> - Seletores Personalizados </li>
             <li><a href="exercicios/ex020/hover.html" target="_blank">Exercício 020</a> - Hover</li>
             <li><a href="exercicios/ex020/pseud-classes.html" target="_blank">Exercício 020</a> - Pseudo-Classes</li>
             <li><a href="exercicios/ex021/box01.html" target="_blank">Exercício 021</a> - Caixa 1 </li>
