atualização de conteudo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body{
-            background-color: rgba(150, 171, 174, 0.781);
+            background-color:rgb(137, 43, 226);
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
         main{
@@ -21,8 +21,20 @@
             text-align: center;
             text-decoration: underline;
         }
+        
         h2{
             text-align: center;
+            color: blueviolet;
+            border: 2px solid blueviolet;
+            border-radius: 10px;
+        }
+        h2:hover{
+            background-color:blueviolet;
+            color: white; 
+            text-decoration: solid;
+            font-weight: bold;
+            border-radius: 5px;  
+            padding: 5px;
         }
         p{
             text-align: justify;
