adicionado shorthand background no ex022

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,11 +7,19 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('img/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+        ** Shorthand - background: 
+            color>image>position>repeat>size>atachment
+            
+            */
+            background: black url('img/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
+            
         }
         main{
             background-color: white;
@@ -28,7 +36,18 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non iure, aspernatur voluptate voluptas neque quam fuga quos. Repudiandae modi error facilis deleniti ut facere iusto! Sunt hic voluptate veniam optio.lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi modi magni voluptatibus dolor recusandae corporis voluptatum! Incidunt exercitationem amet quis laborum beatae eum est, modi illum dolore possimus enim. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias mollitia harum enim facilis soluta numquam perferendis fugit quisquam reprehenderit. Perspiciatis accusamus veniam debitis ab, nulla dignissimos possimus dolorem facilis velit.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia excepturi veritatis debitis est omnis rem explicabo repellendus itaque ipsum, officia perferendis facilis eaque obcaecati reprehenderit quisquam quo accusantium et doloribus? </p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia excepturi veritatis debitis est omnis rem explicabo repellendus itaque ipsum, officia perferendis facilis eaque obcaecati reprehenderit quisquam quo accusantium et doloribus? 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum autem consectetur saepe mollitia soluta modi vel eius enim quasi earum odit ipsa aliquid, ab iure magni quod ad rerum dicta!
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda modi optio doloremque totam veritatis reprehenderit eligendi pariatur itaque, soluta sit blanditiis nisi incidunt deleniti maxime laudantium officia laboriosam! Incidunt, repudiandae.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat velit commodi maiores! Aut, dignissimos, error inventore ducimus ipsa sint commodi dicta adipisci esse quaerat a veritatis fugiat soluta vel? Nostrum?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem aperiam natus rerum delectus nam itaque inventore nulla similique! Maxime, exercitationem odio ullam fugiat vel cumque dicta tempore magnam ad incidunt?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus reprehenderit ducimus quis dolore, quo beatae. Aspernatur sunt nam quidem voluptatum animi accusamus adipisci quod recusandae sequi ullam. Deserunt, sint dolor!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos tempore consectetur consequuntur ullam explicabo veniam reiciendis eos fuga, quasi saepe placeat. Cumque explicabo vero et nobis repellat quisquam voluptates porro.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis corrupti eius aliquid nobis, adipisci quos quis magni praesentium natus pariatur voluptas quam mollitia est voluptatibus id totam amet aperiam ipsum.lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tempora impedit accusamus! Molestias facere repudiandae, odit illum ab quisquam facilis officia sapiente quidem, sunt tempore. Repellendus iusto nisi atque ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos saepe inventore fuga facilis officia similique aspernatur harum soluta fugiat ducimus, repellat aliquid corrupti explicabo molestiae aut rerum in impedit a?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto error illum quis saepe sed, aliquid labore incidunt consectetur delectus, harum ipsa ipsam esse necessitatibus et vitae! Iure illum quo deserunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, temporibus neque fugit veritatis rem nobis dolores nostrum voluptatem fugiat illum id ea ad, laudantium explicabo enim assumenda minus hic impedit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro expedita eum quo, ipsa quae aperiam laudantium debitis quod quasi odit optio ea, rerum, fugiat blanditiis excepturi illum consequatur. Impedit, dicta.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deserunt sapiente fuga, commodi ipsam atque nemo nam earum aliquid omnis veniam error magnam quo? Asperiores omnis voluptate ab corporis deleniti.
+        <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur numquam nemo aliquid ea repudiandae temporibus veritatis tenetur dolores corrupti! Nemo ratione doloremque eius praesentium laboriosam est similique placeat, nobis vero.    
+    </p>
     </main>
 </body>
 </html>
