--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -5,12 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        p{
+        #container{
+            background-image: url('img/target001.png');
+            background-size: 100% 100%;
+            position: relative;
+            height: 500px;
+            padding: 10px;
+            background-color: blueviolet;
+
+        }
+        #conteudo{
+            position: absolute;
+            height: 200px;
+            width: 400px;
+            background-color: yellowgreen;
+            
+            left: 50%;
+            top: 50%;
+
         }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <p>O crianço é um menino que não dorme</p>
+    <section id="container">
+        <article id="conteudo"> 
+
+        </article>
+    </section>
 </body>
 </html>
