--- a/desafios/modulo-02/d012/index.html
+++ b/desafios/modulo-02/d012/index.html
@@ -100,6 +100,6 @@
             </p>
         </section>
     </main>
-    <footer><p>exercício feito por oliveadr para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a> </p></footer>
+    <footer><p>Exercício feito por oliveadr para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a> </p></footer>
 </body>
 </html>
