--- a/desafios/modulo-02/d012/index.html
+++ b/desafios/modulo-02/d012/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header>
-            Cordel Moderno
+            <h1>Cordel Moderno</h1>
             <p>
                Por <a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_blank">
                      <strong>Milton Duarte</strong>
@@ -19,23 +19,16 @@
         </header>
         <section class="normal">
             <p>
-                Estou ficando cansado
-                <br>
-                Da tal tecnologia
-                <br>
-                Só se fala por e-mail
-                <br>
-                Mensagem curta e fria
-                <br>
-                Twitter e Facebook
-                <br>
-                Antes que eu caduque
-                <br>
-                Vou dizer tudo em poesia.
-                <br>
+                Estou ficando cansado <br>
+                Da tal tecnologia <br>
+                Só se fala por e-mail <br>
+                Mensagem curta e fria <br>
+                Twitter e Facebook <br>
+                Antes que eu caduque <br>
+                Vou dizer tudo em poesia. <br>
             </p>
         </section>
-        <section class="imagem">
+        <section class="imagem" id="img1">
             <p>
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -68,7 +61,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img2">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
